[gd_scene load_steps=3 format=3 uid="uid://c454ctyxfqac8"]

[ext_resource type="Script" path="res://menus/save_select_screen.gd" id="1_0kuot"]
[ext_resource type="Theme" uid="uid://cymbtmi8h011n" path="res://themes/menu_theme.tres" id="1_q7vyh"]

[node name="save_select_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q7vyh")
script = ExtResource("1_0kuot")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Select Save Slot"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="save_one" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2

[node name="save_two" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2

[node name="save_three" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2

[node name="name_save" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="CenterContainer" type="CenterContainer" parent="name_save"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="name_save/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="name_save/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Name"
horizontal_alignment = 1

[node name="save_name_edit" type="LineEdit" parent="name_save/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_length = 10

[node name="enter_name_button" type="Button" parent="name_save/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter
"

[connection signal="pressed" from="CenterContainer/HBoxContainer/save_one" to="." method="_on_save_one_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/save_two" to="." method="_on_save_two_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/save_three" to="." method="_on_save_three_pressed"]
[connection signal="pressed" from="name_save/CenterContainer/VBoxContainer/enter_name_button" to="." method="_on_enter_name_button_pressed"]
